додано іконки та фон

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,20 @@
 
             <ul class="auth-nav list" >
                 <li class="auth-nav-item">
-                    <a class="auth-nav-item-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="auth-nav-item-link link" href="mailto:info@devstudio.com">
+                        <svg class="auth-nav-svg" width="16" height="12">
+                            <use href="./images/svg-image/icons.svg#icon-envelope"></use>
+                        </svg>
+                        <span>info@devstudio.com</span>
+                    </a>
                 </li>
                 <li class="auth-nav-item">
-                    <a class="auth-nav-item-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="auth-nav-item-link link" href="tel:+380961111111">
+                        <svg class="auth-nav-svg" width="16" height="12">
+                            <use href="./images/svg-image/icons.svg#icon-vector"></use>
+                        </svg>
+                        <span>+38 096 111 11 11</span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -66,75 +76,94 @@
 
                 <ul class="exemples-list list">
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img.jpg" alt="ноутбук с открытым веб-сайтом" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple">Технокряк</h3>
-                            <p class="description-exemple">Веб-сайт</p>
-                        </div>
+                        <a class="exemples-list-link link" href="#">
+                            <img class="exemples-list-img" src="./images/exemples/img.jpg" alt="ноутбук с открытым веб-сайтом" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple">Технокряк</h3>
+                                <p class="description-exemple">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-1.jpg" alt="два баскетболиста в процессе игры" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple" lang="en" >Постер New Orlean vs Golden Star</h3>
-                            <p class="description-exemple">Дизайн</p>
-                        </div>
+                        <a class="exemples-list-link link" href="#">
+                            <img class="exemples-list-img" src="./images/exemples/img-1.jpg" alt="два баскетболиста в процессе игры" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple" lang="en" >Постер New Orlean vs Golden Star</h3>
+                                <p class="description-exemple">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-2.jpg" alt="логотип ресторана с названием" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple">Ресторан Seafood</h3>
-                            <p class="description-exemple">Приложение</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-2.jpg" alt="логотип ресторана с названием" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple">Ресторан Seafood</h3>
+                                <p class="description-exemple">Приложение</p>
+                            </div>
+                        </a>
+                        
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-3.jpg" alt="наушники" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple">Проект Prime</h3>
-                            <p class="description-exemple">Маркетинг</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-3.jpg" alt="наушники" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple">Проект Prime</h3>
+                                <p class="description-exemple">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-4.jpg" alt="две коробки" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple">Проект Boxes</h3>
-                            <p class="description-exemple">Приложение</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-4.jpg" alt="две коробки" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple">Проект Boxes</h3>
+                                <p class="description-exemple">Приложение</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-5.jpg" alt="монитор с открытым веб-сайтом" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple" lang="en">Inspiration has no Borders</h3>
-                            <p class="description-exemple">Веб-сайт</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-5.jpg" alt="монитор с открытым веб-сайтом" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple" lang="en">Inspiration has no Borders</h3>
+                                <p class="description-exemple">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-6.jpg" alt="открытый журнал" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple" lang="en">Издание Limited Edition</h3>
-                            <p class="description-exemple">Дизайн</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-6.jpg" alt="открытый журнал" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple" lang="en">Издание Limited Edition</h3>
+                                <p class="description-exemple">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-7.jpg" alt="ярлык с названием компании" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple">Проект LAB</h3>
-                            <p class="description-exemple">Маркетинг</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-7.jpg" alt="ярлык с названием компании" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple">Проект LAB</h3>
+                                <p class="description-exemple">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
 
                     <li class="exemples-list-item">
-                        <img class="exemples-list-img" src="./images/exemples/img-8.jpg" alt="ноутбук с открытым приложением" width="370" height="294">
-                        <div class="exemples-item-container">
-                            <h3 class="title-exemple" lang="en">Growing Business</h3>
-                            <p class="description-exemple">Приложение</p>
-                        </div>
+                        <a class="exemples-list-link link" href="">
+                            <img class="exemples-list-img" src="./images/exemples/img-8.jpg" alt="ноутбук с открытым приложением" width="370" height="294">
+                            <div class="exemples-item-container">
+                                <h3 class="title-exemple" lang="en">Growing Business</h3>
+                                <p class="description-exemple">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
         </div>
@@ -143,21 +172,57 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="container">
-            <a class="logo link" lang="en" href="./index.html"><span class="logo-part">Web</span>Studio</a>
-            <address class="head-address" >
-                <ul class="address-list list">
-                    <li class="address-list-item">
-                        <a class="map-link link" href="https://goo.gl/maps/u1v6NZFveLFgmQ5e6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+        <div class="footer-container container">
+            <div class="left-part">
+                <a class="logo link" lang="en" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+                <address class="head-address" >
+                    <ul class="address-list list">
+                        <li class="address-list-item">
+                            <a class="map-link link" href="https://goo.gl/maps/u1v6NZFveLFgmQ5e6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address-list-item">
+                            <a class="address-link link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="address-list-item">
+                            <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="average-part">
+                <h3 class="social-list-title">присоединяйтесь</h3>
+                <ul class="general-social-list list">
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-list-item">
-                        <a class="address-link link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-list-item">
-                        <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
