--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
 
             <ul class="auth-nav list" >
                 <li class="auth-nav-item">
-                    <a class="auth-nav-item-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="auth-nav-item-link link" href="mailto:info@devstudio.com">
+                        <svg class="auth-nav-svg" width="16" height="12">
+                            <use href="./images/svg-image/icons.svg#icon-envelope"></use>
+                        </svg>
+                        <span>info@devstudio.com</span>
+                    </a>
                 </li>
                 <li class="auth-nav-item">
-                    <a class="auth-nav-item-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="auth-nav-item-link link" href="tel:+380961111111">
+                        <svg class="auth-nav-svg" width="16" height="12">
+                            <use href="./images/svg-image/icons.svg#icon-vector"></use>
+                        </svg>
+                        <span>+38 096 111 11 11</span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -45,7 +55,7 @@
     <main>
         <!-- HERO -->
         <section class="hero">
-            <div class="container">
+            <div class="hero-container container">
                 <h1 class="head-title">
                     Эффективные решения <br>для вашего бизнеса
                 </h1>
@@ -59,21 +69,41 @@
                 <h2 hidden>Особенности</h2>
                 <ul class="features-list list">
                     <li class="features-list-item">
+                        <div class="features-svg">
+                            <svg class="features-svg-icon" width="70" height="70">
+                                <use href="./images/svg-image/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Внимание к деталям</h3>
                         <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
 
                     <li class="features-list-item">
+                        <div class="features-svg">
+                            <svg class="features-svg-icon" width="70" height="70">
+                                <use href="./images/svg-image/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Пунктуальность</h3>
                         <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
 
                     <li class="features-list-item">
+                        <div class="features-svg">
+                            <svg class="features-svg-icon" width="70" height="70">
+                                <use href="./images/svg-image/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Планирование</h3>
                         <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
 
                     <li class="features-list-item">
+                        <div class="features-svg">
+                            <svg class="features-svg-icon" width="70" height="70">
+                                <use href="./images/svg-image/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle">Современные</h3>
                         <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -109,6 +139,36 @@
                         <div class="team-list-content">
                             <h3 class="team-subtitle">Игорь Демьяненко</h3>
                             <p class="team-description" lang="en">Product Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -116,6 +176,36 @@
                         <div class="team-list-content">
                             <h3 class="team-subtitle">Ольга Репина</h3>
                             <p class="team-description" lang="en">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -123,6 +213,36 @@
                         <div class="team-list-content">
                             <h3 class="team-subtitle">Николай Тарасов</h3>
                             <p class="team-description" lang="en">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -130,30 +250,150 @@
                         <div class="team-list-content">   
                             <h3 class="team-subtitle">Михаил Ермаков</h3>
                             <p class="team-description" lang="en">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a class="social-list-link link" href="#">
+                                        <svg class="social-list-icon">
+                                            <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <!-- SECTION 4-->
+        <section class="clients container section">
+            <h2 class="title">Постоянные клиенты</h2>
+            <ul class="clients-list list">
+                <li class="clients-list-item">
+                    <a class="clients-list-link link" href="">
+                        <svg class="clients-list-svg" width="41" height="47">
+                            <use href="./images/svg-image/icons.svg#icon-group"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="clients-list-item">
+                    <a class="clients-list-link link" href="">
+                        <svg class="clients-list-svg" width="40" height="52">
+                            <use href="./images/svg-image/icons.svg#icon-group-1"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="clients-list-item">
+                    <a class="clients-list-link link" href="">
+                        <svg class="clients-list-svg" width="43" height="41">
+                            <use href="./images/svg-image/icons.svg#icon-group-2"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="clients-list-item">
+                    <a class="clients-list-link link" href="">
+                        <svg class="clients-list-svg" width="84" height="41">
+                            <use href="./images/svg-image/icons.svg#icon-group-3"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="clients-list-item">
+                    <a class="clients-list-link link" href="">
+                        <svg class="clients-list-svg" width="63" height="46">
+                            <use href="./images/svg-image/icons.svg#icon-group-4"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="clients-list-item">
+                    <a class="clients-list-link link" href="">
+                        <svg class="clients-list-svg" width="94" height="44">
+                            <use href="./images/svg-image/icons.svg#icon-group-5"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="container">
-            <a class="logo link" lang="en" href="./index.html"><span class="logo-part">Web</span>Studio</a>
-            <address class="head-address" >
-                <ul class="address-list list">
-                    <li class="address-list-item">
-                        <a class="map-link link" href="https://goo.gl/maps/u1v6NZFveLFgmQ5e6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+        <div class="footer-container container">
+            <div class="left-part">
+                <a class="logo link" lang="en" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+                <address class="head-address" >
+                    <ul class="address-list list">
+                        <li class="address-list-item">
+                            <a class="map-link link" href="https://goo.gl/maps/u1v6NZFveLFgmQ5e6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address-list-item">
+                            <a class="address-link link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="address-list-item">
+                            <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="average-part">
+                <h3 class="social-list-title">присоединяйтесь</h3>
+                <ul class="general-social-list list">
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-list-item">
-                        <a class="address-link link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-list-item">
-                        <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="general-social-list-item">
+                        <a class="general-social-list-link" href="">
+                            <svg class="general-social-list-svg">
+                                <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
