внесено дрібні поправки

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li class="auth-nav-item">
                     <a class="auth-nav-item-link link" href="tel:+380961111111">
-                        <svg class="auth-nav-svg" width="16" height="12">
+                        <svg class="auth-nav-svg" width="10" height="16">
                             <use href="./images/svg-image/icons.svg#icon-vector"></use>
                         </svg>
                         <span>+38 096 111 11 11</span>
@@ -362,31 +362,31 @@
             </div>
 
             <div class="average-part">
-                <h3 class="social-list-title">присоединяйтесь</h3>
+                <p class="join">присоединяйтесь</p>
                 <ul class="general-social-list list">
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
                             </svg>
