--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 </li>
                 <li class="auth-nav-item">
                     <a class="auth-nav-item-link link" href="tel:+380961111111">
-                        <svg class="auth-nav-svg" width="16" height="12">
+                        <svg class="auth-nav-svg" width="10" height="16">
                             <use href="./images/svg-image/icons.svg#icon-vector"></use>
                         </svg>
                         <span>+38 096 111 11 11</span>
@@ -96,7 +96,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-2.jpg" alt="логотип ресторана с названием" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple">Ресторан Seafood</h3>
@@ -107,7 +107,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-3.jpg" alt="наушники" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple">Проект Prime</h3>
@@ -117,7 +117,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-4.jpg" alt="две коробки" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple">Проект Boxes</h3>
@@ -127,7 +127,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-5.jpg" alt="монитор с открытым веб-сайтом" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple" lang="en">Inspiration has no Borders</h3>
@@ -137,7 +137,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-6.jpg" alt="открытый журнал" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple" lang="en">Издание Limited Edition</h3>
@@ -147,7 +147,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-7.jpg" alt="ярлык с названием компании" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple">Проект LAB</h3>
@@ -157,7 +157,7 @@
                     </li>
 
                     <li class="exemples-list-item">
-                        <a class="exemples-list-link link" href="">
+                        <a class="exemples-list-link link" href="#">
                             <img class="exemples-list-img" src="./images/exemples/img-8.jpg" alt="ноутбук с открытым приложением" width="370" height="294">
                             <div class="exemples-item-container">
                                 <h3 class="title-exemple" lang="en">Growing Business</h3>
@@ -191,31 +191,31 @@
             </div>
 
             <div class="average-part">
-                <h3 class="social-list-title">присоединяйтесь</h3>
+                <p class="join">присоединяйтесь</p>
                 <ul class="general-social-list list">
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="general-social-list-item">
-                        <a class="general-social-list-link" href="">
+                        <a class="general-social-list-link" href="#">
                             <svg class="general-social-list-svg">
                                 <use href="./images/svg-image/icons.svg#icon-linkedin"></use>
                             </svg>
